[gd_scene load_steps=8 format=3 uid="uid://cn0ypr2lfyvuf"]

[ext_resource type="PackedScene" uid="uid://wwywbjtm7w1a" path="res://environment/meshes/ladder.blend" id="1_4rs0m"]
[ext_resource type="Script" path="res://scripts/environment/ladder.gd" id="2_2sihv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u0mrk"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_lwhcp"]
_surfaces = [{
"aabb": AABB(-0.120831, -0.0562655, -0.720831, 0.241662, 3.14166, 1.44167),
"attribute_data": PackedByteArray(201, 215, 166, 62, 164, 142, 106, 63, 38, 66, 194, 62, 212, 67, 120, 63, 201, 215, 166, 62, 164, 142, 106, 63, 201, 215, 166, 62, 48, 225, 139, 61, 201, 215, 166, 62, 48, 225, 139, 61, 38, 66, 194, 62, 0, 190, 113, 60, 106, 109, 139, 62, 164, 142, 106, 63, 131, 172, 221, 62, 212, 67, 120, 63, 226, 22, 249, 62, 164, 142, 106, 63, 106, 109, 139, 62, 48, 225, 139, 61, 226, 22, 249, 62, 48, 225, 139, 61, 131, 172, 221, 62, 0, 190, 113, 60, 38, 66, 194, 62, 164, 142, 106, 63, 38, 66, 194, 62, 164, 142, 106, 63, 38, 66, 194, 62, 164, 142, 106, 63, 38, 66, 194, 62, 48, 225, 139, 61, 38, 66, 194, 62, 48, 225, 139, 61, 38, 66, 194, 62, 48, 225, 139, 61, 131, 172, 221, 62, 164, 142, 106, 63, 131, 172, 221, 62, 164, 142, 106, 63, 131, 172, 221, 62, 164, 142, 106, 63, 131, 172, 221, 62, 48, 225, 139, 61, 131, 172, 221, 62, 48, 225, 139, 61, 131, 172, 221, 62, 48, 225, 139, 61, 12, 28, 103, 62, 68, 152, 106, 63, 49, 158, 137, 61, 174, 30, 120, 63, 24, 87, 107, 60, 69, 152, 106, 63, 10, 28, 103, 62, 120, 83, 163, 61, 16, 87, 107, 60, 104, 83, 163, 61, 46, 158, 137, 61, 96, 128, 220, 60, 100, 2, 49, 62, 69, 152, 106, 63, 125, 209, 245, 61, 174, 30, 120, 63, 100, 2, 49, 62, 69, 152, 106, 63, 100, 2, 49, 62, 104, 83, 163, 61, 100, 2, 49, 62, 104, 83, 163, 61, 121, 209, 245, 61, 160, 128, 220, 60, 48, 158, 137, 61, 69, 152, 106, 63, 48, 158, 137, 61, 69, 152, 106, 63, 48, 158, 137, 61, 69, 152, 106, 63, 45, 158, 137, 61, 104, 83, 163, 61, 45, 158, 137, 61, 104, 83, 163, 61, 45, 158, 137, 61, 104, 83, 163, 61, 125, 209, 245, 61, 68, 152, 106, 63, 125, 209, 245, 61, 68, 152, 106, 63, 125, 209, 245, 61, 68, 152, 106, 63, 125, 209, 245, 61, 120, 83, 163, 61, 125, 209, 245, 61, 120, 83, 163, 61, 125, 209, 245, 61, 120, 83, 163, 61, 27, 172, 97, 63, 192, 190, 3, 60, 27, 172, 97, 63, 192, 190, 3, 60, 22, 83, 125, 63, 192, 190, 3, 60, 38, 183, 14, 63, 192, 190, 3, 60, 32, 5, 70, 63, 192, 190, 3, 60, 32, 5, 70, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 25, 172, 97, 63, 206, 29, 113, 63, 25, 172, 97, 63, 206, 29, 113, 63, 20, 83, 125, 63, 206, 29, 113, 63, 35, 183, 14, 63, 204, 29, 113, 63, 31, 94, 42, 63, 204, 29, 113, 63, 31, 94, 42, 63, 204, 29, 113, 63, 29, 5, 70, 63, 204, 29, 113, 63, 29, 5, 70, 63, 204, 29, 113, 63, 32, 172, 97, 63, 192, 190, 3, 60, 32, 172, 97, 63, 192, 190, 3, 60, 25, 83, 125, 63, 192, 190, 3, 60, 44, 183, 14, 63, 192, 190, 3, 60, 34, 5, 70, 63, 192, 190, 3, 60, 34, 5, 70, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 32, 172, 97, 63, 204, 29, 113, 63, 32, 172, 97, 63, 204, 29, 113, 63, 25, 83, 125, 63, 204, 29, 113, 63, 44, 183, 14, 63, 204, 29, 113, 63, 37, 94, 42, 63, 204, 29, 113, 63, 37, 94, 42, 63, 204, 29, 113, 63, 34, 5, 70, 63, 204, 29, 113, 63, 34, 5, 70, 63, 204, 29, 113, 63, 27, 172, 97, 63, 192, 190, 3, 60, 27, 172, 97, 63, 192, 190, 3, 60, 25, 83, 125, 63, 192, 190, 3, 60, 38, 183, 14, 63, 192, 190, 3, 60, 34, 5, 70, 63, 192, 190, 3, 60, 34, 5, 70, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 27, 172, 97, 63, 206, 29, 113, 63, 27, 172, 97, 63, 206, 29, 113, 63, 25, 83, 125, 63, 206, 29, 113, 63, 38, 183, 14, 63, 206, 29, 113, 63, 37, 94, 42, 63, 206, 29, 113, 63, 37, 94, 42, 63, 206, 29, 113, 63, 34, 5, 70, 63, 206, 29, 113, 63, 34, 5, 70, 63, 206, 29, 113, 63, 27, 172, 97, 63, 128, 191, 3, 60, 27, 172, 97, 63, 128, 191, 3, 60, 25, 83, 125, 63, 192, 190, 3, 60, 44, 183, 14, 63, 192, 190, 3, 60, 34, 5, 70, 63, 192, 190, 3, 60, 34, 5, 70, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 37, 94, 42, 63, 192, 190, 3, 60, 27, 172, 97, 63, 209, 29, 113, 63, 27, 172, 97, 63, 209, 29, 113, 63, 20, 83, 125, 63, 209, 29, 113, 63, 38, 183, 14, 63, 209, 29, 113, 63, 37, 94, 42, 63, 209, 29, 113, 63, 37, 94, 42, 63, 209, 29, 113, 63, 29, 5, 70, 63, 209, 29, 113, 63, 29, 5, 70, 63, 209, 29, 113, 63, 32, 172, 97, 63, 192, 190, 3, 60, 32, 172, 97, 63, 192, 190, 3, 60, 25, 83, 125, 63, 192, 190, 3, 60, 44, 183, 14, 63, 192, 190, 3, 60, 38, 5, 70, 63, 192, 190, 3, 60, 38, 5, 70, 63, 192, 190, 3, 60, 39, 94, 42, 63, 192, 190, 3, 60, 39, 94, 42, 63, 192, 190, 3, 60, 32, 172, 97, 63, 204, 29, 113, 63, 32, 172, 97, 63, 204, 29, 113, 63, 25, 83, 125, 63, 204, 29, 113, 63, 44, 183, 14, 63, 204, 29, 113, 63, 39, 94, 42, 63, 204, 29, 113, 63, 39, 94, 42, 63, 204, 29, 113, 63, 34, 5, 70, 63, 204, 29, 113, 63, 34, 5, 70, 63, 204, 29, 113, 63),
"format": 4119,
"index_count": 192,
"index_data": PackedByteArray(0, 0, 3, 0, 9, 0, 0, 0, 9, 0, 6, 0, 8, 0, 10, 0, 21, 0, 8, 0, 21, 0, 19, 0, 20, 0, 23, 0, 17, 0, 20, 0, 17, 0, 14, 0, 13, 0, 15, 0, 4, 0, 13, 0, 4, 0, 2, 0, 7, 0, 18, 0, 12, 0, 7, 0, 12, 0, 1, 0, 22, 0, 11, 0, 5, 0, 22, 0, 5, 0, 16, 0, 24, 0, 27, 0, 33, 0, 24, 0, 33, 0, 30, 0, 32, 0, 34, 0, 45, 0, 32, 0, 45, 0, 43, 0, 44, 0, 47, 0, 41, 0, 44, 0, 41, 0, 38, 0, 37, 0, 39, 0, 28, 0, 37, 0, 28, 0, 26, 0, 31, 0, 42, 0, 36, 0, 31, 0, 36, 0, 25, 0, 46, 0, 35, 0, 29, 0, 46, 0, 29, 0, 40, 0, 70, 0, 67, 0, 75, 0, 70, 0, 75, 0, 76, 0, 65, 0, 68, 0, 78, 0, 65, 0, 78, 0, 73, 0, 49, 0, 52, 0, 62, 0, 49, 0, 62, 0, 57, 0, 54, 0, 51, 0, 59, 0, 54, 0, 59, 0, 60, 0, 53, 0, 55, 0, 61, 0, 53, 0, 61, 0, 63, 0, 50, 0, 48, 0, 56, 0, 50, 0, 56, 0, 58, 0, 69, 0, 71, 0, 77, 0, 69, 0, 77, 0, 79, 0, 66, 0, 64, 0, 72, 0, 66, 0, 72, 0, 74, 0, 86, 0, 83, 0, 91, 0, 86, 0, 91, 0, 92, 0, 81, 0, 84, 0, 94, 0, 81, 0, 94, 0, 89, 0, 85, 0, 87, 0, 93, 0, 85, 0, 93, 0, 95, 0, 82, 0, 80, 0, 88, 0, 82, 0, 88, 0, 90, 0, 102, 0, 99, 0, 107, 0, 102, 0, 107, 0, 108, 0, 97, 0, 100, 0, 110, 0, 97, 0, 110, 0, 105, 0, 101, 0, 103, 0, 109, 0, 101, 0, 109, 0, 111, 0, 98, 0, 96, 0, 104, 0, 98, 0, 104, 0, 106, 0, 118, 0, 115, 0, 123, 0, 118, 0, 123, 0, 124, 0, 113, 0, 116, 0, 126, 0, 113, 0, 126, 0, 121, 0, 117, 0, 119, 0, 125, 0, 117, 0, 125, 0, 127, 0, 114, 0, 112, 0, 120, 0, 114, 0, 120, 0, 122, 0),
"material": SubResource("StandardMaterial3D_u0mrk"),
"primitive": 3,
"vertex_count": 128,
"vertex_data": PackedByteArray(62, 118, 247, 189, 163, 118, 102, 189, 98, 136, 56, 63, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 163, 118, 102, 189, 98, 136, 56, 63, 0, 128, 0, 0, 255, 255, 255, 255, 62, 118, 247, 189, 163, 118, 102, 189, 98, 136, 56, 63, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 98, 136, 56, 63, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 98, 136, 56, 63, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 98, 136, 56, 63, 0, 128, 255, 255, 255, 255, 255, 255, 62, 118, 247, 189, 163, 118, 102, 189, 164, 85, 245, 62, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 163, 118, 102, 189, 164, 85, 245, 62, 0, 128, 0, 0, 255, 255, 255, 255, 62, 118, 247, 189, 163, 118, 102, 189, 164, 85, 245, 62, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 164, 85, 245, 62, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 164, 85, 245, 62, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 164, 85, 245, 62, 0, 128, 255, 255, 255, 255, 255, 255, 62, 118, 247, 61, 163, 118, 102, 189, 98, 136, 56, 63, 0, 128, 0, 0, 255, 255, 255, 255, 62, 118, 247, 61, 163, 118, 102, 189, 98, 136, 56, 63, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 61, 163, 118, 102, 189, 98, 136, 56, 63, 255, 255, 0, 128, 255, 255, 255, 255, 62, 118, 247, 61, 35, 119, 69, 64, 98, 136, 56, 63, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 61, 35, 119, 69, 64, 98, 136, 56, 63, 0, 128, 255, 255, 255, 255, 255, 255, 62, 118, 247, 61, 35, 119, 69, 64, 98, 136, 56, 63, 255, 255, 0, 128, 255, 255, 255, 255, 62, 118, 247, 61, 163, 118, 102, 189, 164, 85, 245, 62, 0, 128, 0, 0, 255, 255, 255, 255, 62, 118, 247, 61, 163, 118, 102, 189, 164, 85, 245, 62, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 61, 163, 118, 102, 189, 164, 85, 245, 62, 255, 255, 0, 128, 255, 255, 255, 255, 62, 118, 247, 61, 35, 119, 69, 64, 164, 85, 245, 62, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 61, 35, 119, 69, 64, 164, 85, 245, 62, 0, 128, 255, 255, 255, 255, 255, 255, 62, 118, 247, 61, 35, 119, 69, 64, 164, 85, 245, 62, 255, 255, 0, 128, 255, 255, 255, 255, 62, 118, 247, 189, 163, 118, 102, 189, 164, 85, 245, 190, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 163, 118, 102, 189, 164, 85, 245, 190, 0, 128, 0, 0, 255, 255, 255, 255, 62, 118, 247, 189, 163, 118, 102, 189, 164, 85, 245, 190, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 164, 85, 245, 190, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 164, 85, 245, 190, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 164, 85, 245, 190, 0, 128, 255, 255, 0, 0, 254, 255, 62, 118, 247, 189, 163, 118, 102, 189, 98, 136, 56, 191, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 163, 118, 102, 189, 98, 136, 56, 191, 0, 128, 0, 0, 0, 0, 254, 255, 62, 118, 247, 189, 163, 118, 102, 189, 98, 136, 56, 191, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 98, 136, 56, 191, 0, 0, 0, 128, 255, 127, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 98, 136, 56, 191, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 189, 35, 119, 69, 64, 98, 136, 56, 191, 0, 128, 255, 255, 0, 0, 254, 255, 62, 118, 247, 61, 163, 118, 102, 189, 164, 85, 245, 190, 0, 128, 0, 0, 0, 0, 254, 255, 62, 118, 247, 61, 163, 118, 102, 189, 164, 85, 245, 190, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 61, 163, 118, 102, 189, 164, 85, 245, 190, 255, 255, 0, 128, 254, 255, 0, 128, 62, 118, 247, 61, 35, 119, 69, 64, 164, 85, 245, 190, 255, 127, 255, 127, 255, 255, 255, 191, 62, 118, 247, 61, 35, 119, 69, 64, 164, 85, 245, 190, 0, 128, 255, 255, 0, 0, 254, 255, 62, 118, 247, 61, 35, 119, 69, 64, 164, 85, 245, 190, 255, 255, 0, 128, 254, 255, 255, 255, 62, 118, 247, 61, 163, 118, 102, 189, 98, 136, 56, 191, 0, 128, 0, 0, 0, 0, 254, 255, 62, 118, 247, 61, 163, 118, 102, 189, 98, 136, 56, 191, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 61, 163, 118, 102, 189, 98, 136, 56, 191, 255, 255, 0, 128, 254, 255, 0, 128, 62, 118, 247, 61, 35, 119, 69, 64, 98, 136, 56, 191, 255, 255, 255, 255, 0, 0, 255, 191, 62, 118, 247, 61, 35, 119, 69, 64, 98, 136, 56, 191, 0, 128, 255, 255, 0, 0, 254, 255, 62, 118, 247, 61, 35, 119, 69, 64, 98, 136, 56, 191, 255, 255, 0, 128, 254, 255, 255, 255, 184, 107, 199, 189, 43, 68, 14, 63, 212, 131, 18, 63, 0, 0, 0, 128, 255, 127, 220, 131, 184, 107, 199, 189, 43, 68, 14, 63, 212, 131, 18, 63, 185, 135, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 1, 7, 185, 62, 60, 182, 21, 63, 0, 0, 0, 128, 255, 127, 220, 131, 184, 107, 199, 189, 1, 7, 185, 62, 60, 182, 21, 63, 255, 127, 184, 7, 255, 255, 255, 191, 184, 107, 199, 61, 43, 68, 14, 63, 212, 131, 18, 63, 185, 135, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 43, 68, 14, 63, 212, 131, 18, 63, 255, 255, 0, 128, 185, 135, 255, 255, 184, 107, 199, 61, 1, 7, 185, 62, 60, 182, 21, 63, 255, 127, 184, 7, 255, 255, 255, 191, 184, 107, 199, 61, 1, 7, 185, 62, 60, 182, 21, 63, 255, 255, 0, 128, 185, 135, 255, 255, 184, 107, 199, 189, 51, 80, 245, 62, 122, 170, 30, 191, 0, 0, 0, 128, 255, 127, 220, 131, 184, 107, 199, 189, 51, 80, 245, 62, 122, 170, 30, 191, 185, 135, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 223, 206, 145, 62, 18, 120, 27, 191, 0, 0, 0, 128, 255, 127, 220, 131, 184, 107, 199, 189, 223, 206, 145, 62, 18, 120, 27, 191, 255, 127, 184, 7, 255, 255, 255, 191, 184, 107, 199, 61, 223, 206, 145, 62, 18, 120, 27, 191, 255, 127, 184, 7, 255, 255, 255, 191, 184, 107, 199, 61, 223, 206, 145, 62, 18, 120, 27, 191, 255, 255, 0, 128, 185, 135, 255, 255, 184, 107, 199, 61, 51, 80, 245, 62, 122, 170, 30, 191, 185, 135, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 51, 80, 245, 62, 122, 170, 30, 191, 255, 255, 0, 128, 185, 135, 255, 255, 184, 107, 199, 189, 235, 244, 137, 63, 151, 109, 20, 63, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 235, 244, 137, 63, 151, 109, 20, 63, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 231, 14, 98, 63, 151, 109, 20, 63, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 231, 14, 98, 63, 151, 109, 20, 63, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 235, 244, 137, 63, 151, 109, 20, 63, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 235, 244, 137, 63, 151, 109, 20, 63, 255, 255, 0, 128, 0, 128, 255, 255, 184, 107, 199, 61, 231, 14, 98, 63, 151, 109, 20, 63, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 231, 14, 98, 63, 151, 109, 20, 63, 255, 255, 0, 128, 0, 128, 255, 255, 184, 107, 199, 189, 235, 244, 137, 63, 213, 97, 29, 191, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 235, 244, 137, 63, 213, 97, 29, 191, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 231, 14, 98, 63, 213, 97, 29, 191, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 231, 14, 98, 63, 213, 97, 29, 191, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 231, 14, 98, 63, 213, 97, 29, 191, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 231, 14, 98, 63, 213, 97, 29, 191, 255, 255, 0, 128, 0, 128, 255, 255, 184, 107, 199, 61, 235, 244, 137, 63, 213, 97, 29, 191, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 235, 244, 137, 63, 213, 97, 29, 191, 255, 255, 0, 128, 0, 128, 255, 255, 184, 107, 199, 189, 57, 196, 215, 63, 93, 191, 18, 63, 0, 0, 0, 128, 255, 127, 121, 131, 184, 107, 199, 189, 57, 196, 215, 63, 93, 191, 18, 63, 242, 134, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 65, 225, 190, 63, 15, 155, 21, 63, 0, 0, 0, 128, 255, 127, 121, 131, 184, 107, 199, 189, 65, 225, 190, 63, 15, 155, 21, 63, 255, 127, 242, 6, 255, 255, 255, 191, 184, 107, 199, 61, 57, 196, 215, 63, 93, 191, 18, 63, 242, 134, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 57, 196, 215, 63, 93, 191, 18, 63, 255, 255, 0, 128, 242, 134, 255, 255, 184, 107, 199, 61, 65, 225, 190, 63, 15, 155, 21, 63, 255, 127, 242, 6, 255, 255, 255, 191, 184, 107, 199, 61, 65, 225, 190, 63, 15, 155, 21, 63, 255, 255, 0, 128, 242, 134, 255, 255, 184, 107, 199, 189, 33, 0, 207, 63, 77, 143, 30, 191, 0, 0, 0, 128, 255, 127, 121, 131, 184, 107, 199, 189, 33, 0, 207, 63, 77, 143, 30, 191, 242, 134, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 41, 29, 182, 63, 155, 179, 27, 191, 0, 0, 0, 128, 255, 127, 121, 131, 184, 107, 199, 189, 41, 29, 182, 63, 155, 179, 27, 191, 255, 127, 242, 6, 255, 255, 255, 191, 184, 107, 199, 61, 41, 29, 182, 63, 155, 179, 27, 191, 255, 127, 242, 6, 255, 255, 255, 191, 184, 107, 199, 61, 41, 29, 182, 63, 155, 179, 27, 191, 255, 255, 0, 128, 242, 134, 255, 255, 184, 107, 199, 61, 33, 0, 207, 63, 77, 143, 30, 191, 242, 134, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 33, 0, 207, 63, 77, 143, 30, 191, 255, 255, 0, 128, 242, 134, 255, 255, 184, 107, 199, 189, 152, 187, 12, 64, 149, 109, 21, 63, 0, 0, 0, 128, 187, 133, 0, 128, 184, 107, 199, 189, 152, 187, 12, 64, 149, 109, 21, 63, 255, 127, 65, 250, 0, 0, 255, 191, 184, 107, 199, 189, 93, 72, 0, 64, 161, 23, 19, 63, 0, 0, 0, 128, 187, 133, 0, 128, 184, 107, 199, 189, 93, 72, 0, 64, 161, 23, 19, 63, 188, 133, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 152, 187, 12, 64, 149, 109, 21, 63, 255, 127, 65, 250, 0, 0, 255, 191, 184, 107, 199, 61, 152, 187, 12, 64, 149, 109, 21, 63, 255, 255, 0, 128, 255, 127, 32, 253, 184, 107, 199, 61, 93, 72, 0, 64, 161, 23, 19, 63, 188, 133, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 93, 72, 0, 64, 161, 23, 19, 63, 255, 255, 0, 128, 255, 127, 32, 253, 184, 107, 199, 189, 143, 80, 16, 64, 223, 11, 28, 191, 0, 0, 0, 128, 187, 133, 0, 128, 184, 107, 199, 189, 143, 80, 16, 64, 223, 11, 28, 191, 255, 127, 65, 250, 0, 0, 255, 191, 184, 107, 199, 189, 84, 221, 3, 64, 211, 97, 30, 191, 0, 0, 0, 128, 187, 133, 0, 128, 184, 107, 199, 189, 84, 221, 3, 64, 211, 97, 30, 191, 188, 133, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 84, 221, 3, 64, 211, 97, 30, 191, 188, 133, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 84, 221, 3, 64, 211, 97, 30, 191, 255, 255, 0, 128, 255, 127, 32, 253, 184, 107, 199, 61, 143, 80, 16, 64, 223, 11, 28, 191, 255, 127, 65, 250, 0, 0, 255, 191, 184, 107, 199, 61, 143, 80, 16, 64, 223, 11, 28, 191, 255, 255, 0, 128, 255, 127, 32, 253, 184, 107, 199, 189, 16, 38, 52, 64, 151, 109, 20, 63, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 16, 38, 52, 64, 151, 109, 20, 63, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 84, 175, 39, 64, 151, 109, 20, 63, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 84, 175, 39, 64, 151, 109, 20, 63, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 16, 38, 52, 64, 151, 109, 20, 63, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 16, 38, 52, 64, 151, 109, 20, 63, 255, 255, 0, 128, 0, 128, 255, 255, 184, 107, 199, 61, 84, 175, 39, 64, 151, 109, 20, 63, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 84, 175, 39, 64, 151, 109, 20, 63, 255, 255, 0, 128, 0, 128, 255, 255, 184, 107, 199, 189, 16, 38, 52, 64, 213, 97, 29, 191, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 16, 38, 52, 64, 213, 97, 29, 191, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 189, 84, 175, 39, 64, 213, 97, 29, 191, 0, 0, 0, 128, 255, 127, 0, 128, 184, 107, 199, 189, 84, 175, 39, 64, 213, 97, 29, 191, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 84, 175, 39, 64, 213, 97, 29, 191, 0, 128, 0, 0, 255, 255, 255, 191, 184, 107, 199, 61, 84, 175, 39, 64, 213, 97, 29, 191, 255, 255, 0, 128, 0, 128, 255, 255, 184, 107, 199, 61, 16, 38, 52, 64, 213, 97, 29, 191, 0, 128, 255, 255, 0, 0, 255, 191, 184, 107, 199, 61, 16, 38, 52, 64, 213, 97, 29, 191, 255, 255, 0, 128, 0, 128, 255, 255)
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_eluaf"]
size = Vector3(0.262171, 3.76841, 1.42378)

[sub_resource type="BoxShape3D" id="BoxShape3D_6qr48"]
size = Vector3(0.187577, 3.27644, 1.41327)

[sub_resource type="BoxShape3D" id="BoxShape3D_bifg2"]
size = Vector3(2, 0.797835, 2)

[node name="Ladder" instance=ExtResource("1_4rs0m")]
script = ExtResource("2_2sihv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ladder" index="0"]
mesh = SubResource("ArrayMesh_lwhcp")

[node name="ForRayCast" type="StaticBody3D" parent="." index="1" groups=["ladder_mesh"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ForRayCast" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52345, 0)
shape = SubResource("BoxShape3D_eluaf")

[node name="ForPlayer" type="StaticBody3D" parent="." index="2" groups=["ladder_mesh"]]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ForPlayer" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42769, 0)
shape = SubResource("BoxShape3D_6qr48")

[node name="LadderBottom" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.975792, 0.825245, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="LadderBottom" index="0" groups=["ladder_spot"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.234022, -0.474385, 0)
shape = SubResource("BoxShape3D_bifg2")

[node name="LadderTop" type="Area3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.976, 2.638, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="LadderTop" index="0" groups=["ladder_spot"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.813329, 0.428705, 0)
shape = SubResource("BoxShape3D_bifg2")

[connection signal="body_entered" from="LadderBottom" to="." method="_on_ladder_bottom_body_entered"]
[connection signal="body_exited" from="LadderBottom" to="." method="_on_ladder_bottom_body_exited"]
[connection signal="body_entered" from="LadderTop" to="." method="_on_ladder_top_body_entered"]
[connection signal="body_exited" from="LadderTop" to="." method="_on_ladder_top_body_exited"]
